# difftest

./: Cargo.toml  todo.md
cargo-expect/: Cargo.toml
cargo-expect/src/: command.rs  html.rs  main.rs  output.rs  promote.rs  style.css
example/: .gitignore  Cargo.toml
example/src/: lib.rs
expectation/: Cargo.toml  todo.md
expectation-plugin/: Cargo.toml
expectation-plugin/src/: lib.rs
expectation-shared/: Cargo.toml
expectation-shared/src/: filesystem.rs  lib.rs
expectation/src/: filesystem.rs  ipc.rs  lib.rs  provider.rs  test.rs
expectation/src/extensions/: image.rs  mod.rs  svg.rs  text.rs
expectation_plugin/: Cargo.toml
expectation_plugin/src/: lib.rs
src/: diff.rs  filesystem.rs  lib.rs  provider.rs  test.rs
