[package]
name = "cargo-expect"
version = "0.1.0"
authors = ["Ty Overby <ty@pre-alpha.com>"]
description = "Expectation Tests Runner"
license = "MIT/Apache-2.0"

[dependencies]
structopt = "0.2.*"
serde = "1.*.*"
serde_json = "1.*.*"
crossbeam = "0.4.*"

[dependencies.expectation-shared]
path = "../expectation-shared"
