[package]
name = "expectation"
version = "0.1.0"
authors = ["Ty Overby <ty@pre-alpha.com>"]
description = "Expectation Tests"
license = "MIT/Apache-2.0"

[features]
default = ["text"]

text = ["diff"]

[dependencies]
serde="1.*.*"
serde_json="1.*.*"

[dependencies.diff]
version = "0.1.*"
optional = true

[dependencies.expectation-shared]
path = "../expectation-shared"
